src/test/deca/syntax/invalid/class/method/missing_parameter_name_11.deca
// Description:
//    Tests a syntactically incorrect program for a method declaration missing a parameter name
//
// Results:
//    Line 11 : Error, expected parameter name.
//
// History:
//    created on 07/01/2025

class TestClass {
    void methodName(int) {
        int a = 10;
    }
}